--- a/tamagotchi/src/css/MyTama.css
+++ b/tamagotchi/src/css/MyTama.css
@@ -125,6 +125,7 @@
     margin-top: 20px;
     padding-top: 5px;
     overflow-y: auto;
+    margin-left: 10px;
 }
 
 .inventory-items img {
@@ -144,12 +145,6 @@
     border-radius: 10px;
     border: 1px solid #ddd;
     transition: transform 0.3s ease, box-shadow 0.3s ease, opacity 0.5s ease;
-}
-
-.inventory-item.disappearing {
-    opacity: 0;
-    transform: scale(0.5);
-    transition: opacity 0.5s ease, transform 0.5s ease;
 }
 
 .inventory-item:hover {
