--- a/tamagotchi/src/css/Navbar.css
+++ b/tamagotchi/src/css/Navbar.css
@@ -86,6 +86,7 @@
         justify-content: space-between;
         align-items: center;
         background-color: #314252;
+        z-index: 10;
     }
 
     .hamburger-menu {
